make Jayo Java 17 compatible