@@ -6,6 +6,8 @@
 package jayo.internal;
 
 import jayo.Jayo;
+import jayo.Reader;
+import jayo.Writer;
 import jayo.network.NetworkEndpoint;
 import jayo.network.NetworkServer;
 import org.junit.jupiter.api.Test;
@@ -18,17 +20,18 @@ public class SocketTest {
     @Test
     void socketTest() throws InterruptedException {
         // Let the system pick up a local free port
-        try (var listener = NetworkServer.bindTcp(new InetSocketAddress(0))) {
-            var serverThread = Thread.startVirtualThread(() -> {
-                try (var serverEndpoint = listener.accept();
-                     var serverWriter = Jayo.buffer(serverEndpoint.getWriter())) {
+        try (NetworkServer listener = NetworkServer.bindTcp(new InetSocketAddress(0))) {
+            Thread serverThread = new Thread(() -> {
+                try (NetworkEndpoint serverEndpoint = listener.accept();
+                     Writer serverWriter = Jayo.buffer(serverEndpoint.getWriter())) {
                     serverWriter.write("The Answer to the Ultimate Question of Life is ")
                             .writeUtf8CodePoint('4')
                             .writeUtf8CodePoint('2');
                 }
             });
-            try (var clientEndpoint = NetworkEndpoint.connectTcp(listener.getLocalAddress());
-                 var clientReader = Jayo.buffer(clientEndpoint.getReader())) {
+            serverThread.start();
+            try (NetworkEndpoint clientEndpoint = NetworkEndpoint.connectTcp(listener.getLocalAddress());
+                 Reader clientReader = Jayo.buffer(clientEndpoint.getReader())) {
                 assertThat(clientReader.readString())
                         .isEqualTo("The Answer to the Ultimate Question of Life is 42");
             }
